; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/dtc/extr_data.c_data_add_marker.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/dtc/extr_data.c_data_add_marker.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.data = type { i32 }
%struct.marker = type { i32, i8*, i32*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @data_add_marker(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.data, align 4
  %5 = alloca %struct.data, align 4
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca %struct.marker*, align 8
  %9 = getelementptr inbounds %struct.data, %struct.data* %5, i32 0, i32 0
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %10 = call %struct.marker* @xmalloc(i32 32)
  store %struct.marker* %10, %struct.marker** %8, align 8
  %11 = getelementptr inbounds %struct.data, %struct.data* %5, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.marker*, %struct.marker** %8, align 8
  %14 = getelementptr inbounds %struct.marker, %struct.marker* %13, i32 0, i32 3
  store i32 %12, i32* %14, align 8
  %15 = load i32, i32* %6, align 4
  %16 = load %struct.marker*, %struct.marker** %8, align 8
  %17 = getelementptr inbounds %struct.marker, %struct.marker* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = load %struct.marker*, %struct.marker** %8, align 8
  %20 = getelementptr inbounds %struct.marker, %struct.marker* %19, i32 0, i32 1
  store i8* %18, i8** %20, align 8
  %21 = load %struct.marker*, %struct.marker** %8, align 8
  %22 = getelementptr inbounds %struct.marker, %struct.marker* %21, i32 0, i32 2
  store i32* null, i32** %22, align 8
  %23 = load %struct.marker*, %struct.marker** %8, align 8
  %24 = getelementptr inbounds %struct.data, %struct.data* %5, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @data_append_markers(i32 %25, %struct.marker* %23)
  %27 = getelementptr inbounds %struct.data, %struct.data* %4, i32 0, i32 0
  store i32 %26, i32* %27, align 4
  %28 = getelementptr inbounds %struct.data, %struct.data* %4, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  ret i32 %29
}

declare dso_local %struct.marker* @xmalloc(i32) #1

declare dso_local i32 @data_append_markers(i32, %struct.marker*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
